kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampleapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sampleapp
  template:
    metadata:
      labels:
        app: sampleapp
    spec:
      containers:
        - name: sampleapp
          image: andriikuper/sampleapp:main
          ports:
            - containerPort: 8000
          command: 
            - python
            - manage.py
            - runserver
            - 0.0.0.0:8000
