kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sampleapp-service
spec:
  selector:
    app: sampleapp
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
